--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,11 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
+    <!-- What is dp and sp?
+    https://material.io/design/layout/pixel-density.html#pixel-density-on-android
+    https://stackoverflow.com/questions/2025282/what-is-the-difference-between-px-dip-dp-and-sp
+    -->
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
